processed/gerrit/txt/31396.txt
Change:     31396
Subject:    LU-10603 ptlrpc: export req_buffers_max via procfs
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/31396
Change-Id:  Ie4806b79d104c7ea9aa34b6a8a280587fccef689
Project:    fs/lustre-release
Branch:     b2_10
Status:     ABANDONED
Owner:      Minh Diep
Created:    2018-02-23 16:22:35.000000000
Updated:    2019-02-26 06:59:46.000000000
Patch Set:  5
Insertions: +3
Deletions:  -0
Comments:   0 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Alex Zhuravlev, James Simmons, John Hammond, Bruno Faccini

--- Commit Message ---
LU-10603 ptlrpc: export req_buffers_max via procfs

after LU-9372 gcc7 complains:
lustre/ptlrpc/lproc_ptlrpc.c:382:16: error: ‘ptlrpc_lprocfs_req_buffers_max_fops’ defined but not used [-Werror=unused-const-variable=]
 LPROC_SEQ_FOPS(ptlrpc_lprocfs_req_buffers_max);
                 ^

Lustre-change: https://review.whamcloud.com/31162
Lustre-commit: 3542f9780bf413849010143a5c72701620390120

Change-Id: Ie4806b79d104c7ea9aa34b6a8a280587fccef689
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Faccini Bruno <bruno.faccini@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>
Signed-off-by: Minh Diep <minh.diep@intel.com>

--- Review History ---

--- Message (Minh Diep, 2018-02-23 16:22:35.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-02-23 16:22:39.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Minh Diep, 2018-02-23 16:23:21.000000000) ---
Patch Set 2: Patch Set 1 was rebased

--- Message (Minh Diep, 2018-02-23 16:25:10.000000000) ---
Patch Set 3: Patch Set 2 was rebased

--- Message (wc-checkpatch, 2018-02-23 16:27:50.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-02-23 16:30:46.000000000) ---
Patch Set 3:

Code-wise looks good to me.

--- Message (Bruno Faccini, 2018-02-23 16:39:32.000000000) ---
Patch Set 3: Code-Review+1

--- Message (Jenkins, 2018-02-23 16:41:32.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.hpdd.intel.com/job/lustre-reviews/54714/ : FAILURE

--- Message (Jenkins, 2018-02-23 16:42:17.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.hpdd.intel.com/job/lustre-reviews/54715/ : FAILURE

--- Message (Jenkins, 2018-02-23 16:48:23.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.hpdd.intel.com/job/lustre-reviews/54716/ : SUCCESS

--- Message (Autotest, 2018-02-23 16:56:32.000000000) ---
Patch Set 3:

Trevis Autotest started optional review-dne-zfs-part-2 session.

--- Message (Autotest, 2018-02-23 16:56:34.000000000) ---
Patch Set 3:

Trevis Autotest started optional review-dne-zfs-part-1 session.

--- Message (Autotest, 2018-02-23 16:56:35.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-3 session.

--- Message (Autotest, 2018-02-23 16:56:35.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-ldiskfs session.

--- Message (Autotest, 2018-02-23 16:56:36.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-1 session.

--- Message (Autotest, 2018-02-23 16:56:36.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-2 session.

--- Message (Autotest, 2018-02-23 16:56:37.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-4 session.

--- Message (Autotest, 2018-02-23 16:56:37.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-zfs-part-2 session.

--- Message (Autotest, 2018-02-23 16:56:38.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-zfs-part-1 session.

--- Message (Alex Zhuravlev, 2018-04-02 17:56:26.000000000) ---
Patch Set 3: Code-Review+1

--- Message (James Simmons, 2018-04-02 19:42:11.000000000) ---
Patch Set 3: Code-Review+1

--- Message (John Hammond, 2018-04-12 14:54:31.000000000) ---
Patch Set 3: Code-Review-1

Needs rebase.

--- Message (Minh Diep, 2018-04-18 20:22:47.000000000) ---
Patch Set 4: Patch Set 3 was rebased

--- Message (Minh Diep, 2018-04-18 20:23:25.000000000) ---
Patch Set 5: Patch Set 4 was rebased

--- Message (wc-checkpatch, 2018-04-18 20:25:01.000000000) ---
Patch Set 5:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-04-18 20:28:16.000000000) ---
Patch Set 5:

Code-wise looks good to me.

--- Message (Jenkins, 2018-04-18 20:42:06.000000000) ---
Patch Set 4: Verified-1

Build Failed 

https://build.hpdd.intel.com/job/lustre-reviews/55962/ : FAILURE

--- Message (Jenkins, 2018-04-18 20:46:19.000000000) ---
Patch Set 5: Verified+1

Build Successful 

https://build.hpdd.intel.com/job/lustre-reviews/55963/ : SUCCESS

--- Message (Autotest, 2018-04-18 20:54:11.000000000) ---
Patch Set 5:

Onyx Autotest started optional review-dne-zfs-part-2 session.

--- Message (Autotest, 2018-04-18 20:54:12.000000000) ---
Patch Set 5:

Onyx Autotest started enforced review-dne-part-1 session.

--- Message (Autotest, 2018-04-18 20:54:12.000000000) ---
Patch Set 5:

Onyx Autotest started enforced review-zfs-part-1 session.

--- Message (Autotest, 2018-04-18 20:54:13.000000000) ---
Patch Set 5:

Onyx Autotest started enforced review-dne-part-4 session.

--- Message (Autotest, 2018-04-18 20:54:13.000000000) ---
Patch Set 5:

Onyx Autotest started enforced review-dne-part-2 session.

--- Message (Autotest, 2018-04-18 20:54:14.000000000) ---
Patch Set 5:

Onyx Autotest started optional review-dne-zfs-part-1 session.

--- Message (Autotest, 2018-04-18 20:54:15.000000000) ---
Patch Set 5:

Onyx Autotest started enforced review-dne-part-3 session.

--- Message (Autotest, 2018-04-18 20:54:16.000000000) ---
Patch Set 5:

Onyx Autotest started enforced review-ldiskfs session.

--- Message (Autotest, 2018-04-18 20:54:17.000000000) ---
Patch Set 5:

Onyx Autotest started enforced review-zfs-part-2 session.

--- Message (Andreas Dilger, 2019-02-26 06:59:46.000000000) ---
Abandoned

Not going to land these for b2_10.
